samples/_failures_safe/1761612350_c3829e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecf3d5fe.c: In function ‘main’:
./samples/SAFE/__tmp_ecf3d5fe.c:167:5: error: expected declaration or statement at end of input
  167 |     char input[256];
      |     ^~~~
